...
    val title: String,
    val ao3Id: String?
) {
    ANY("any", "Any rating", null),
    GENERAL("general", "General Audiences", "10"),
    TEEN("teen", "Teen And Up", "11"),
    MATURE("mature", "Mature", "12"),
    EXPLICIT("explicit", "Explicit", "13"),
    NOT_RATED("notRated", "Not Rated", "9");

    companion object {
        val searchCases = listOf(ANY, GENERAL, TEEN, MATURE, EXPLICIT)
    }
...
    OR_LOWER("orLower", "Rating-")
}

enum class AO3Warning(val appleCaseName: String, val ao3Id: String, val title: String) {
    NO_WARNINGS("noWarnings", "16", "No Archive Warnings Apply"),
    CHOOSE_NOT_TO("chooseNotTo", "14", "Creator Chose Not To Use Archive Warnings"),
    VIOLENCE("violence", "17", "Graphic Depictions Of Violence"),
    DEATH("death", "18", "Major Character Death"),
    NON_CON("nonCon", "19", "Rape/Non-Con"),
    UNDERAGE("underage", "20", "Underage Sex")
}

enum class AO3Category(val appleCaseName: String, val ao3Id: String, val title: String) {
    FF("ff", "116", "F/F"),
    FM("fm", "22", "F/M"),
    GEN("gen", "21", "Gen"),
    MM("mm", "23", "M/M"),
    MULTI("multi", "2246", "Multi"),
    OTHER("other", "24", "Other")
}
...
